--- a/block_ads.conf
+++ b/block_ads.conf
@@ -1,17 +1,9 @@
-hostname = app.bilibili.com, grpc.biliapi.net, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, afd.baidu.com, api-163.biliapi.net/cove, api.gotokeep.com, r.inews.qq.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, *.zhihu.com, mp.weixin.qq.com, mapi.weibo.com, api.weibo.com, *.uve.weibo.com, fdfs.xmcdn.com, fuss10.elemecdn.com, *.elecfans.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com,  *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, adse.ximalaya.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, *.meituan.net, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, ss0.bdstatic.com, api.smzdm.com, app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com
+hostname = app.bilibili.com, grpc.biliapi.net, afd.baidu.com, api-163.biliapi.net/cove, api.gotokeep.com, r.inews.qq.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, *.zhihu.com, mp.weixin.qq.com, mapi.weibo.com, api.weibo.com, *.uve.weibo.com, fdfs.xmcdn.com, fuss10.elemecdn.com, *.elecfans.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com,  *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, adse.ximalaya.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, *.meituan.net, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, ss0.bdstatic.com, api.smzdm.com, app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com
 
 # bilibili去广告(iOS15)
 # 开屏页广告,推荐页广告,动态(推荐话题和列表广告),视频播放页面(up主推荐广告,相关推荐广告)
 ^https:\/\/app\.bilibili\.com\/x\/(v2\/(splash\/(list|show)|feed\/index\?)|resource\/show\/tab\/v2) url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/bilibili-json.js
 ^https:\/\/app\.bilibili\.com\/bilibili\.app\.(view\.v1\.View\/View|dynamic\.v2\.Dynamic\/DynAll)$ url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/bilibili-proto.js
-
-# YouTube去广告
-(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+)&ctier=L(&.+) url 302 $1&ctier=A$2
-^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad url reject
-
-^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject
-^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject
-^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext url reject
 
 # 百度贴吧去广告
 ^(http\:\/\/c\.tieba\.baidu\.com\/(tiebaads\/commonbatch|c\/s\/sync)|https\:\/\/afd\.baidu\.com\/afd\/entry) url script-response-body https://raw.githubusercontent.com/app2smile/rules/master/js/tieba-json.js
