--- a/block_ads.conf
+++ b/block_ads.conf
@@ -1,4 +1,4 @@
-hostname = app.bilibili.com, grpc.biliapi.net, afd.baidu.com, api-163.biliapi.net/cove, api.gotokeep.com, r.inews.qq.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, *.zhihu.com, mp.weixin.qq.com, mapi.weibo.com, api.weibo.com, *.uve.weibo.com, fdfs.xmcdn.com, fuss10.elemecdn.com, *.elecfans.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com,  *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, adse.ximalaya.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, *.meituan.net, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, ss0.bdstatic.com, api.smzdm.com, app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com
+hostname = app.bilibili.com, grpc.biliapi.net, afd.baidu.com, api-163.biliapi.net/cove, api.gotokeep.com, r.inews.qq.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, www.zhihu.com, zhuanlan.zhihu.com, mp.weixin.qq.com, mapi.weibo.com, api.weibo.com, *.uve.weibo.com, fdfs.xmcdn.com, fuss10.elemecdn.com, *.elecfans.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com,  *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, adse.ximalaya.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, *.meituan.net, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, ss0.bdstatic.com, api.smzdm.com, app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com
 
 # bilibili去广告(iOS15)
 # 开屏页广告,推荐页广告,动态(推荐话题和列表广告),视频播放页面(up主推荐广告,相关推荐广告)
@@ -42,6 +42,7 @@ hostname = app.bilibili.com, grpc.biliapi.net, afd.baidu.com, api-163.biliapi.ne
 ^https?:\/\/.+\/hls.cache.p4p\/ url reject-img
 
 # 知乎 Ads (By Redeembynight)
+^https:\/\/www\.zhihu\.com\/ url request-header (\r\n)User-Agent:.+(\r\n) request-header $1User-Agent: Mozilla/5.0 (iPhone; CPU iPhone OS 14_0 like Mac OS X) AppleWebKit/601.1.46 (KHTML, like Gecko) Version/9.0 Mobile/13B143 Safari/601.1 Quark/604.1 T7/10.7 SearchCraft/2.7.7 (Baidu; P1 9.0.0)$2
 # 知乎网页直接看
 ^https://www\.zhihu\.com/question/ url script-response-body https://raw.githubusercontent.com/id77/QuantumultX/master/Script/zhihu.js
 ^https://zhuanlan\.zhihu\.com/p/ url script-response-body https://raw.githubusercontent.com/id77/QuantumultX/master/Script/zhihu.js
@@ -51,43 +52,6 @@ https://www\.zhihu\.com/api/v4/answers/\d+/related-readings url reject-200
 https://www\.zhihu\.com/api/v4/hot_recommendation url reject-200
 https://www\.zhihu\.com/commercial_api/banners_v3/mobile_banner url reject-200
 https://zhuanlan\.zhihu\.com/api/articles/\d+/recommendation url reject-200
-# 知乎处理用户信息
-^https?:\/\/api\.zhihu\.com\/people\/ url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
-# 知乎信息流去广告
-^https?:\/\/api\.zhihu\.com\/(moments|topstory)(\/|\?)?(recommend|action=|feed_type=)(?!\/people) url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
-# 知乎回答列表去广告
-^https?:\/\/api\.zhihu\.com\/v4\/questions url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
-# 知乎获取黑名单
-^https?:\/\/api\.zhihu\.com\/settings\/blocked_users url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
-# 知乎官方消息去广告
-^https?:\/\/api\.zhihu\.com\/notifications\/v3\/(message\?|timeline\/entry\/system_message) url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
-# 知乎预置关键词去广告
-^https?:\/\/api\.zhihu\.com\/search\/preset_words\? url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
-# 优化软件配置
-^https?:\/\/appcloud2\.zhihu\.com\/v\d+\/config url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
-# 知乎热搜去广告
-^https?:\/\/api\.zhihu\.com\/search\/top_search\/tabs\/hot\/items url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
-# 知乎热榜去广告
-^https?:\/\/api\.zhihu\.com\/topstory\/hot-lists?(\?|\/) url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
-# 知乎评论去广告
-^https?:\/\/api\.zhihu\.com\/(comment_v5\/)?(answers|comments?|articles|pins)\/\d+\/(root_|child_)?comments? url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
-# 知乎回答内容优化
-^https?:\/\/www\.zhihu\.com\/appview\/v2\/answer\/.*(entry=(?!(preload-topstory|preload-search|preload-subscription)))? url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
-# 知乎屏蔽关键词解锁
-^https?:\/\/api\.zhihu\.com\/feed-root\/block url script-analyze-echo-response https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/zhihu/zhihu_plus.js
-# 知乎去除最常访问
-^https?:\/\/api\.zhihu\.com\/moments\/recent url reject-dict
-# 知乎去除回答下的广告
-^https?:\/\/www\.zhihu\.com\/api\/v4\/answers\/\d+\/recommendations url reject-dict
-# 知乎其他广告拦截
-^https?:\/\/api\.zhihu\.com\/(notifications\/v3\/count|v3\/package|me\/guides|drama\/living-info|ad|fringe|commercial|market\/popovers|.*featured-comment-ad) url reject-dict
-# 知乎拦截部分预加载
-# ^https?:\/\/www\.zhihu\.com\/appview\/(p|v2\/answer|zvideo)\/.*entry=(preload-topstory|preload-search|preload-subscription) url reject-dict
-# 知乎品牌提问广告
-^https?:\/\/api\.zhihu\.com\/brand\/question\/\d+/card\? url reject-dict
-^https?:\/\/www\.zhihu\.com\/api\/v\d+\/brand\/question/\d+/card\? url reject-dict
-# 屏蔽消息页面上拉的用户精选
-^https?:\/\/api\.zhihu\.com/moments/hybrid\? url reject-dict
 
 
 # 微信 Ads (By Choler)
