--- a/premium.conf
+++ b/premium.conf
@@ -1,4 +1,43 @@
-hostname =  book.haitunwallet.com, notability.com, account.wps.cn, vstou.faxingwu.com, pay.wecut.com, api.picsart.c*, api.meiease.c*, api.revenuecat.com, api.xiuxiu.meitu.com, api.abema.io, *.caixin.com, *.openinstall.io, buy.itunes.apple.com,  *.ykimg.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net, api.m.jd.com, ios.prod.ftl.netflix.com, api.adguard.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
+hostname =  shimo.im, api.account.meitu.com, api.meiyan.com, www.fengread.com, user-kaji-api.b612kaji.com, api.infzm.com, *.wtzw.com, apiios.xiangha.com, 39.97.157.167, apiios_dq.xiangha.com, appweb_dq.xiangha.com, 101.200.225.157, book.haitunwallet.com, notability.com, account.wps.cn, vstou.faxingwu.com, pay.wecut.com, api.picsart.c*, api.meiease.c*, api.revenuecat.com, api.xiuxiu.meitu.com, api.abema.io, *.caixin.com, *.openinstall.io, buy.itunes.apple.com,  *.ykimg.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net, api.m.jd.com, ios.prod.ftl.netflix.com, api.adguard.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
+
+# shimo.im
+# 石墨文档 vip
+^https:\//shimo.im\/lizard-api\/users\/me url script-response-body https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/shimo.js
+
+
+# api.account.meitu.com, api.meiyan.com(by@E_R)
+# 美颜相机紫钻VIP
+^https?:\/\/api\.account\.meitu\.com\/(common\/check_device_login_pwd|users\/show_current\.json) url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiYanXiangJi.js
+^https?:\/\/api\.meiyan\.com\/vip\/(user_center\.json|user_info\.json) url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiYanXiangJi.js
+
+
+# 读者
+^(http|https):\/\/[\w-]+\.fengread\.com\/tuwen\/appads\/ url reject-200
+https?:\/\/www\.fengread\.com\/(tuwen\/apktw\/bookv5|ebookreader\/fyhuserv5\/userinfo) url script-response-body https://raw.githubusercontent.com/Redeembynight/own/main/QuantumultX/script/unlock/Duzhe.js
+
+# user-kaji-api.b612kaji.com
+# B612咔叽（墨鱼手记）
+https://user-kaji-api.b612kaji.com/v1/purchase/subscription/subscriber/status url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/612.js
+
+
+# api.infzm.com
+# 南方周末(by E_R)
+^https?:\/\/api\.infzm\.com\/mobile\/(user|contents\?|contents\/\d+\?|course_borrow|courses\/\d+\?|mall|course_items) url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/NanFangZhouMo.js
+
+
+# *.wtzw.com
+# 七猫小说(by E_R)
+^https?:\/\/(api-\w+|xiaoshuo)\.wtzw\.com\/api\/v\d\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/QiMaoXiaoShuo.js
+
+
+# apiios.xiangha.com, 39.97.157.167
+# 香哈菜谱(by E_R)
+^https?:\/\/apiios\.xiangha\.com\/main\d+\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/XiangHaCaiPu.js
+
+# apiios_dq.xiangha.com, appweb_dq.xiangha.com, 101.200.225.157
+# 菜谱大全&烘焙小屋(by E_R)
+^https?:\/\/apiios_dq\.xiangha\.com\/v\d\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/CaiPuDaQuan.js
+^https?:\/\/appweb_dq\.xiangha\.com\/center\/pay\/home url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/CaiPuDaQuan.js
 
 # 海豚记账
 https:\/\/book\.haitunwallet\.com\/app\/vip\/status url script-response-body https://raw.githubusercontent.com/nzw9314/QuantumultX/master/Script/HTJZ.js
