--- a/premium.conf
+++ b/premium.conf
@@ -1,4 +1,4 @@
-hostname =  shimo.im, api.account.meitu.com, api.meiyan.com, www.fengread.com, user-kaji-api.b612kaji.com, api.infzm.com, *.wtzw.com, apiios.xiangha.com, 39.97.157.167, apiios_dq.xiangha.com, appweb_dq.xiangha.com, 101.200.225.157, book.haitunwallet.com, notability.com, account.wps.cn, vstou.faxingwu.com, pay.wecut.com, api.picsart.c*, api.meiease.c*, api.revenuecat.com, api.xiuxiu.meitu.com, api.abema.io, *.caixin.com, *.openinstall.io, buy.itunes.apple.com,  *.ykimg.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net, api.m.jd.com, ios.prod.ftl.netflix.com, api.adguard.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
+hostname =  shimo.im, api.account.meitu.com, api.xiuxiu.meitu.com, api.meiyan.com, www.fengread.com, user-kaji-api.b612kaji.com, api.infzm.com, *.wtzw.com, apiios.xiangha.com, 39.97.157.167, apiios_dq.xiangha.com, appweb_dq.xiangha.com, 101.200.225.157, book.haitunwallet.com, notability.com, account.wps.cn, vstou.faxingwu.com, pay.wecut.com, api.picsart.c*, api.meiease.c*, api.revenuecat.com, api.abema.io, *.caixin.com, *.openinstall.io, buy.itunes.apple.com,  *.ykimg.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net, api.m.jd.com, ios.prod.ftl.netflix.com, api.adguard.com, api.meiyan.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com,
 
 # shimo.im
 # 石墨文档 vip
@@ -9,6 +9,8 @@ hostname =  shimo.im, api.account.meitu.com, api.meiyan.com, www.fengread.com, u
 # 美颜相机紫钻VIP
 ^https?:\/\/api\.account\.meitu\.com\/(common\/check_device_login_pwd|users\/show_current\.json) url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiYanXiangJi.js
 ^https?:\/\/api\.meiyan\.com\/vip\/(user_center\.json|user_info\.json) url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiYanXiangJi.js
+# > 美图秀秀(2022.01.17)
+^https?:\/\/(h5|api)\.xiuxiu\.meitu\.com\/v\d\/(h\d\/vip|vip|user)\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiTuXiuXiu.js
 
 
 # 读者
@@ -61,9 +63,6 @@ https:\/\/pay\.wecut\.com\/apple\/(iosVerifyReceipt|iosAppVerifyReceipt)\.php ur
 
 #vsco
 ^https:\/\/api\.revenuecat\.com\/v\d\/subscribers\/\d+$ url script-response-body https://raw.githubusercontent.com/Redeembynight/own/main/QuantumultX/script/unlock/vsco.js
-
-#美图秀秀粉钻 (by-Gökotta)
-https:\/\/api\.xiuxiu\.meitu\.com\/v1\/user\/show\.json url script-response-body https://raw.githubusercontent.com/callmeheihei/Black/script/Crack/mtxx.js
 
 # AbeamTV ip检测
 ^https?:\/\/api\.abema\.io\/v\d\/ip\/check url reject-200
