--- a/premium.conf
+++ b/premium.conf
@@ -184,8 +184,8 @@ https:\/\/pay\.wecut\.com\/apple\/(iosVerifyReceipt|iosAppVerifyReceipt)\.php ur
 # dict.eudic.net,
 # ^https:\/\/dict\.eudic\.net\/jingting\/GetThisChapterTaskStatus? url script-response-body https://raw.githubusercontent.com/dududouniwaner/for_quan/main/scripts/mryy.js
 
-#流利说.阅读 (by@火羽&@singee)
-^https?:\/\/vira\.llsapp\.com\/api\/v2\/readings\/(accessible|limitation) url script-response-body https://raw.githubusercontent.com/dududouniwaner/for_quan/main/scripts/llyd.js
+# > 流利说·阅读(2022.01.16)
+^https?:\/\/vira\.llsapp\.com\/api\/v\d\/\w+\/\w+$ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/LiuLiShuo-YueDu.js
 
 #Pdfexpert
 ^https:\/\/license\.pdfexpert\.com\/api\/1\.0\/pdfexpert6\/subscription\/(refresh$|check$) url script-response-body https://raw.githubusercontent.com/dududouniwaner/for_quan/main/scripts/Pdfexpert.vip.js
