--- a/block_ads.conf
+++ b/block_ads.conf
@@ -86,6 +86,8 @@ https://zhuanlan\.zhihu\.com/api/articles/\d+/recommendation url reject-200
 
 
 # 微信 Ads (By Choler)
+# > WeChat Official Account
+^(http|https):\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url response-body "advertisement_num":\d,"advertisement_info":\[.+\], response-body "advertisement_num":0,"advertisement_info":[],
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
 
