--- a/premium.conf
+++ b/premium.conf
@@ -1,4 +1,4 @@
-hostname =  dxy.com, api.psy-1.com, note.youdao.com, api.revenuecat.com, aiqicha.baidu.com, i.weread.qq.com,101*.*.*,116.*.*.*,117.*.*.*,120.*.*.*,121.*.*.*,140.*.*.*,183.*.*.*,203*.*.*, shimo.im, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, api.account.meitu.com, api.meiyan.com, *.bjxkhc.com, api.bjxkhc.com, getuserinfo-globalapi.zymk.cn, www.fengread.com, www.luqijianggushi.com, user-kaji-api.b612kaji.com, api.infzm.com, *.wtzw.com, apiios.xiangha.com, 39.97.157.167, apiios_dq.xiangha.com, appweb_dq.xiangha.com, 101.200.225.157, book.haitunwallet.com, notability.com, api.vuevideo.net, account.wps.cn, vstou.faxingwu.com, pay.wecut.com, api.picsart.c*, api.meiease.cn, api.revenuecat.com, api.abema.io, *.caixin.com, *.openinstall.io, buy.itunes.apple.com,  *.ykimg.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net, api.m.jd.com, ios.prod.ftl.netflix.com, api.adguard.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com
+hostname =  dxy.com, api.psy-1.com, note.youdao.com, api.revenuecat.com, aiqicha.baidu.com, i.weread.qq.com,101*.*.*,116.*.*.*,117.*.*.*,120.*.*.*,121.*.*.*,140.*.*.*,183.*.*.*,203*.*.*, shimo.im, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, api.account.meitu.com, api.meiyan.com, *.bjxkhc.com, api.bjxkhc.com, getuserinfo-globalapi.zymk.cn, www.fengread.com, www.luqijianggushi.com, user-kaji-api.b612kaji.com, api.infzm.com, *.wtzw.com, apiios.xiangha.com, 39.97.157.167, apiios_dq.xiangha.com, appweb_dq.xiangha.com, 101.200.225.157, book.haitunwallet.com, notability.com, api.vuevideo.net, account.wps.cn, vstou.faxingwu.com, pay.wecut.com, api.picsart.c*, api.meiease.cn, api.revenuecat.com, api.abema.io, *.caixin.com, *.openinstall.io, *.ykimg.com, p.du.163.com, newdrugs.dxy.cn, ap*.intsig.net, api.m.jd.com, ios.prod.ftl.netflix.com, api.adguard.com, m.client.10010.com, vira.llsapp.com, license.pdfexpert.com
 
 # dxy.com, 
 # 丁香医生
@@ -88,7 +88,8 @@ https:\/\/pay\.wecut\.com\/apple\/(iosVerifyReceipt|iosAppVerifyReceipt)\.php ur
 
 # iTunes_verify_receipt
 # Attention：试用订阅——取消订阅——恢复订阅
-^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/langkhach270389/Quantumult-X-LK/master/Scripts/langkhach/verify_receipt.js
+# buy.itunes.apple.com
+# ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt$ url script-response-body https://raw.githubusercontent.com/langkhach270389/Quantumult-X-LK/master/Scripts/langkhach/verify_receipt.js
 
 # 小小影视Vip (By Meeta)
 # *.xiaoxiao*.com, *.xiao*.com,
