--- a/block_ads.conf
+++ b/block_ads.conf
@@ -1,4 +1,4 @@
-hostname = app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com, api.bilibili.com, manga.bilibili.com, grpc.biliapi.net, api.abema.io, api.gotokeep.com, r.inews.qq.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, www.zhihu.com, zhuanlan.zhihu.com, mp.weixin.qq.com, mapi.weibo.com, api.weibo.com, *.uve.weibo.com, fdfs.xmcdn.com, fuss10.elemecdn.com, *.elecfans.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com,  *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, adse.ximalaya.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, *.meituan.net, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, ss0.bdstatic.com, api.smzdm.com, app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com, edith.xiaohongshu.com, www.xiaohongshu.com, pages.xiaohongshu.com, referee.xiaohongshu.com
+hostname = app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com, api.bilibili.com, manga.bilibili.com, grpc.biliapi.net, api.abema.io, api.gotokeep.com, r.inews.qq.com, i.weread.qq.com, 4gimg.map.qq.com, newsso.map.qq.com, ssl.kohsocialapp.qq.com, lives.l.qq.com, www.zhihu.com, zhuanlan.zhihu.com, mp.weixin.qq.com, mapi.weibo.com, api.weibo.com, *.uve.weibo.com, fdfs.xmcdn.com, fuss10.elemecdn.com, *.elecfans.com, ups.youku.com, pic.k.sohu.com, mmg.aty.sohu.com,  *.k.sohu.com, api.tv.sohu.com, api.k.sohu.com, m.aty.sohu.com, hui.sohu.com, api.tv.sohu.com, adse.ximalaya.com, dsp-impr2.youdao.com, oimagea4.ydstatic.com,oimagec2.ydstatic.com, *.ydstatic.com, bdsp-x.jd.com, dsp-x.jd.com, m.360buyimg.com, api.m.jd.com, *.musical.com, *.snssdk.com, *.tiktokv.com, *.snssdk.ly, *.tiktokv.ly, *.musical.ly, *.pstatp.com, *.meituan.net, act.vip.iqiyi.com, iface.iqiyi.com, iface?.iqiyi.com, ss0.bdstatic.com, api.smzdm.com, app-api.smzdm.com,homepage-api.smzdm.com,haojia-api.smzdm.com,haojia.m.smzdm.com,baike-api.smzdm.com,s-api.smzdm.com,zhiyou.m.smzdm.com
 
 
 # AbeamTV
@@ -159,54 +159,3 @@ https://zhuanlan\.zhihu\.com/api/articles/\d+/recommendation url reject-200
 ^https?:\/\/s-api\.smzdm\.com\/sou\/filter\/tags\/hot_tags url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_remove_ads.js
 # 值会员权益中心banner广告
 ^https?:\/\/zhiyou\.m\.smzdm\.com\/user\/vip\/ajax_get_banner url script-response-body https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/smzdm/smzdm_remove_ads.js
-
-
-// ==UserScript==
-// @ScriptName        小红书去广告
-// @Author            @ddgksf2013
-// @ForHelp           若有屏蔽广告的需求，可公众号后台回复APP名称
-// @WechatID          公众号墨鱼手记
-// @TgChannel         https://t.me/ddgksf2021
-// @Contribute        https://t.me/ddgksf2013_bot
-// @MainFunction      去开屏、瀑布流、启动服务广告及一些隐私、广告、青少年请求，去水印及功能增强
-// @Feedback          📮 ddgksf2013@163.com 📮
-// @UpdateTime        2024-03-24
-// @Function          去广告配置（自用，不定期更新）
-// @Suitable          自行观看“# > ”注释内容
-// @Attention         如需引用请注明出处，谢谢合作！
-// @ScriptURL         https://github.com/ddgksf2013/Rewrite/raw/master/AdBlock/XiaoHongShu.conf
-// ==/UserScript==
-# > 小红书_视频播放页商品推广@ddgksf2013
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/widgets url script-response-body https://rules-for-qx.sveir.xyz/Scripts/AdBlock/LittleRedBook/LittleRedBook.min.js
-# > 小红书_短视频流去水印+强制开启保存功能@ddgksf2013
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/redtube\? url script-response-body https://rules-for-qx.sveir.xyz/Scripts/AdBlock/LittleRedBook/LittleRedBook.min.js
-# > 小红书_信息流视频去水印+强制开启保存功能@ddgksf2013
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/videofeed\? url script-response-body https://rules-for-qx.sveir.xyz/Scripts/AdBlock/LittleRedBook/LittleRedBook.min.js
-# > 小红书_信息流图片去水印@ddgksf2013
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/feed\? url script-response-body https://rules-for-qx.sveir.xyz/Scripts/AdBlock/LittleRedBook/LittleRedBook.min.js
-# > 小红书_信息流图片[部分用户是下面请求]去水印@ddgksf2013
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/note\/imagefeed url script-response-body https://rules-for-qx.sveir.xyz/Scripts/AdBlock/LittleRedBook/LittleRedBook.min.js
-# > 小红书_开屏广告@ddgksf2013
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/system_service\/splash_config url script-response-body https://rules-for-qx.sveir.xyz/Scripts/AdBlock/LittleRedBook/LittleRedBook.min.js
-# > 小红书_首页瀑布流@ddgksf2013
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/homefeed\? url script-response-body https://rules-for-qx.sveir.xyz/Scripts/AdBlock/LittleRedBook/LittleRedBook.min.js
-# > 小红书_启动处理@ddgksf2013
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/system_service\/config\? url script-response-body https://rules-for-qx.sveir.xyz/Scripts/AdBlock/LittleRedBook/LittleRedBook.min.js
-# > 小红书_热搜发现@ddgksf2013
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/search\/hot_list url script-response-body https://rules-for-qx.sveir.xyz/Scripts/AdBlock/LittleRedBook/LittleRedBook.min.js
-# > 小红书_默认填词@ddgksf2013
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/search\/hint url script-response-body https://rules-for-qx.sveir.xyz/Scripts/AdBlock/LittleRedBook/LittleRedBook.min.js
-# > 小红书_去除购物@ddgksf2013
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/homefeed\/categories url script-response-body https://rules-for-qx.sveir.xyz/Scripts/AdBlock/LittleRedBook/LittleRedBook.min.js
-# > 小红书_猜你想搜@ddgksf2013
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/search\/trending url script-response-body https://rules-for-qx.sveir.xyz/Scripts/AdBlock/LittleRedBook/LittleRedBook.min.js
-# > 小红书_通用广告请求@ddgksf2013
-^https?:\/\/www\.xiaohongshu\.com\/api\/sns\/v\d\/(tag\/)?ads url reject-dict
-# > 小红书_隐私屏蔽@ddgksf2013
-^https?:\/\/referee\.xiaohongshu\.com\/v\d\/stateReport url reject-dict
-# > 小红书_Switches@ddgksf2013
-^https?:\/\/pages\.xiaohongshu\.com\/data\/native\/matrix_switches url reject-dict
-# > 小红书_青少年请求@ddgksf2013
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/user\/teenager\/status url reject-dict
-# > 小红书_启动引导@ddgksf2013
-^https?:\/\/edith\.xiaohongshu\.com\/api\/sns\/v\d\/guide\/home_guide url reject-dict
